[gd_scene load_steps=5 format=3 uid="uid://o6grniilc162"]

[ext_resource type="Texture2D" uid="uid://chy7op5i51qje" path="res://asset/btn/btn.png" id="1_q0woq"]
[ext_resource type="Script" path="res://play/Btn.gd" id="2_473k5"]
[ext_resource type="FontFile" uid="uid://c0q8rwmf71f8u" path="res://asset/font/PixelifySans-VariableFont_wght.ttf" id="3_8dw35"]

[sub_resource type="LabelSettings" id="LabelSettings_0i1q3"]
font = ExtResource("3_8dw35")
font_size = 31
font_color = Color(0.466667, 0.776471, 0.886275, 0.682353)

[node name="Btn" type="Sprite2D"]
texture_filter = 3
position = Vector2(105, 45)
scale = Vector2(3, 3)
texture = ExtResource("1_q0woq")
script = ExtResource("2_473k5")

[node name="Control2" type="Control" parent="."]
layout_direction = 1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.6667
offset_top = -15.0
offset_right = -34.6667
offset_bottom = -15.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5556
offset_right = 54.4444
offset_bottom = 92.0
grow_horizontal = 2
theme_override_constants/margin_top = 0

[node name="Label" type="Label" parent="Control2/MarginContainer"]
layout_mode = 2
text = "Karane"
label_settings = SubResource("LabelSettings_0i1q3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -15.0
offset_right = -35.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Control/Button" to="." method="hover"]
[connection signal="mouse_exited" from="Control/Button" to="." method="unhover"]
